# olcf-test-harness-examples

./: README.md
frontier/every-node/Source/: build.sh
frontier/every-node/Source/Common_Scripts/: check.sh  report.sh  slurm.template.x
frontier/every-node/lammps-nompi/Scripts/: check_lammps.sh  check_single_node.py  check_single_node_wrapper.sh  lmp_wrapper.sh  report_lammps.sh  rgt_test_input.ini  setup_env.sh  slurm.template.x
frontier/every-node/lammps/Scripts/: check_single_node.py  rgt_test_input.ini  setup_env.sh
frontier/lammps/: .gitignore  README.md  rgt.input.lammps
frontier/lammps/Source/: Makefile.cray_cc  Makefile.gfx90a  build.sh  build_prebuilt.sh
frontier/lammps/Source/Common_Scripts/: check_lammps.py  find_n_close_factors.py  report_lammps_multiple.py  report_lammps_single.py  setup_env.sh  slurm.template.prebuilt.single.x  slurm.template.single.x  slurm.template.weakscaled.x
frontier/lammps/Source/lammps/src/fmt/: format.h
frontier/lammps/test_1node_4mil_class2/Scripts/: rgt_test_input.ini
frontier/lammps/test_1node_4mil_reax/Scripts/: report_lammps.py  rgt_test_input.ini
frontier/lammps/test_8node_4mil_class2/Scripts/: check_lammps.py  input_files  rgt_test_input.ini  setup_env.sh  slurm.template.x
frontier/lammps/test_8node_4mil_reax/Scripts/: rgt_test_input.ini
frontier/lammps/test_correctness_reax_8node_4mil/Scripts/: check_lammps.py  report_lammps.py  rgt_test_input.ini  setup_env.sh  slurm.template.x
frontier/lammps/test_nodecheck_reax/Scripts/: input_files  rgt_test_input.ini  slurm.template.x
frontier/lammps/test_nodecheck_reax_thermo1_step10000/Scripts/: check_lammps.py  report_lammps.py  rgt_test_input.ini
frontier/minisweep/: rgt.input
frontier/minisweep/Common_Scripts/: check.bash  run.bash  run.bash.long  slurm.template.x
frontier/minisweep/Source/: build.bash
frontier/minisweep/Source/Common_Scripts/: check_minisweep.sh  lsf.template.x.1node  lsf.template.x.mpi  lsf.template.x.mpi.gcc  lsf.template.x.mpi.llvm  lsf.template.x.mpi.omp  lsf.template.x.mpi.pgi  lsf.template.x.mpi.xl  pbs.template.x  report_minisweep.sh
frontier/minisweep/Source/minisweep/: CMakeLists.txt
frontier/minisweep/Source/minisweep/scripts/: HIPLOCALConfig.cmake  cmake_cray_xk7.sh  cmake_hip.sh  cmake_hip_mpi.sh  cmake_ibm_power_gcc_openmp.sh  cmake_ibm_power_llvm.sh  cmake_ibm_power_llvm_openmp.sh  cmake_ibm_power_pgi.sh  cmake_ibm_power_pgi_openmp.sh  cmake_ibm_power_platform_mpi_gcc_cuda.sh  cmake_ibm_power_platform_mpi_xl_cuda.sh  cmake_ibm_power_spectrum_mpi_gcc.sh  cmake_ibm_power_spectrum_mpi_gcc_cuda.sh  cmake_ibm_power_spectrum_mpi_gcc_openmp.sh  cmake_ibm_power_spectrum_mpi_llvm.sh  cmake_ibm_power_spectrum_mpi_llvm_cuda.sh  cmake_ibm_power_spectrum_mpi_llvm_openmp.sh  cmake_ibm_power_spectrum_mpi_pgi.sh  cmake_ibm_power_spectrum_mpi_pgi_cuda.sh  cmake_ibm_power_spectrum_mpi_pgi_openmp.sh  cmake_ibm_power_spectrum_mpi_xl.sh  cmake_ibm_power_spectrum_mpi_xl_cuda.sh  cmake_ibm_power_spectrum_mpi_xl_openmp.sh  cmake_ibm_power_xl.sh  cmake_ibm_power_xl_openmp.sh
frontier/minisweep/Source/minisweep/src/1_base/: arguments.c  arguments.cpp  arguments.h  env.c  env.h  env_assert.c  env_assert_kernels.h  env_cuda.c  env_cuda.h  env_cuda_kernels.h  env_mic_kernels.h  env_mpi.c  env_mpi.h  env_openmp_kernels.h  env_types.h  pointer.c  pointer.h  pointer_kernels.h  types_kernels.h
frontier/minisweep/Source/minisweep/src/2_sweeper_base/: array_accessors_kernels.h  array_operations.c  array_operations.h  definitions_kernels.h  dimensions.c  dimensions.cpp  dimensions.h  dimensions_kernels.h
frontier/minisweep/Source/minisweep/src/3_sweeper/: faces_kba.c  faces_kba.cpp  faces_kba.h  quantities.cpp  quantities_testing.h  quantities_testing_c.h  quantities_testing_kernels.h  stepscheduler_kba.c  stepscheduler_kba.cu  stepscheduler_kba.h  stepscheduler_kba_kernels.h  sweeper.cu  sweeper_kba.h  sweeper_kba_c.h  sweeper_kba_c_kernels.h  sweeper_kba_kernels.h  sweeper_kernels.cu  sweeper_simple.h  sweeper_simple_c.h  sweeper_tileoctants.h  sweeper_tileoctants_c.h
frontier/minisweep/Source/minisweep/src/4_driver/: runner.h  tester.c
frontier/minisweep/hip_mpi_n0002/Scripts/: rgt_test_input.ini
frontier/minisweep/hip_mpi_rpn4_n0002/Scripts/: run.bash
frontier/minisweep/hip_mpi_rpn8_n0002/Scripts/: check.bash
frontier/osu_microbenchmarks/: .gitignore  rgt.input.osu_microbenchmarks
frontier/osu_microbenchmarks/Source/: build.sh  omb_install.sh
hello_world/test/Scripts/: .check_test.sh.swp  check_test.sh  lsf.template.x  report_test.sh  rgt_test_input.ini  slurm.template.x
summit/osu-microbenchmarks-main/: .gitignore  README.md  find_freezes.sh  make.sh  rgt.template  walltimed.txt
summit/osu-microbenchmarks-main/Source/: build.sh
(+176 files in other folders)
